updates to journals 06 and 07

--- a/journals/06-assessing_lime_explanations/06-assessing_lime_explanations.Rmd
+++ b/journals/06-assessing_lime_explanations/06-assessing_lime_explanations.Rmd
@@ -21,7 +21,7 @@ This journal visualizes and compares the results from the different LIME impleme
 ```{r}
 # Load libraries
 library(gretchenalbrecht)
-library(seriation)
+#library(seriation)
 library(tidyverse)
 
 # Load in the testing data (Hamby Data 224 Sets 1 and 11)
